--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/swc-win32-x64-msvc": "^15.0.3",
     "next": "14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "sweetalert2": "^11.14.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
